# tools

./: LICENSE  README.md  build  install
fix-xopp/: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
linux-functions/: CMakeLists.txt
linux-functions/include/lnxfn/: proc_stat.hpp
linux-functions/src/: proc_stat.cpp
randomator/: CMakeLists.txt  main.cpp
scripts/: msoffice2pdf
